--- a/src/pages/categorias/categoria.html
+++ b/src/pages/categorias/categoria.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="red">
+  <ion-navbar >
     <ion-title>
       Categorias
     </ion-title>
@@ -14,10 +14,4 @@
       </ion-card-title>
     </ion-card-content>
   </ion-card>
-
-  <ion-fab right bottom>
-   <button ion-fab color="red" >
-     <ion-icon name="md-add"></ion-icon>
-   </button>
- </ion-fab>
 </ion-content>
