--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,15 +3,15 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Agenda IN6AM</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Agenda IN6AM</h3>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    José Rafael Morente González
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
