--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar color="dark">
-    <ion-title>Login</ion-title>
+  <ion-navbar>
+    <ion-title>Iniciar Sesión</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -26,7 +26,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <button ion-button full color="dark"
+      <button ion-button full
         (click)="iniciarSesion()">
         Iniciar Sesion
       </button>
