--- a/src/pages/tareas/tarea.html
+++ b/src/pages/tareas/tarea.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="red">
+  <ion-navbar >
     <ion-title>
       Tareas
     </ion-title>
@@ -17,9 +17,11 @@
       <h5>{{ tarea.fechaEntrega }}</h5>
       <ion-list>
       <button ion-item (click)="viewForm(tarea.idTarea)">
+        <ion-icon name="ios-arrow-dropright" item-start></ion-icon>
         Actualizar
       </button>
       <button ion-item (click)="borrarTarea(tarea.idTarea)">
+        <ion-icon name="ios-trash-outline" item-start></ion-icon>
         Eliminar
       </button>
       </ion-list> 
@@ -27,7 +29,7 @@
   </ion-card>
 
   <ion-fab right bottom>
-   <button ion-fab color="dark" (click)="viewForm('nueva')">
+   <button ion-fab (click)="viewForm('nueva')">
      <ion-icon name="md-add"></ion-icon>
    </button>
  </ion-fab>
